# RNT

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Main.vcxproj  Main.vcxproj.filters  Makefile  NT.slnx  NT.vcxproj  NT.vcxproj.filters  NtDll.cpp  README.org  RelationalNT.sln  RelationalNT.vcxproj  RelationalNT.vcxproj.filters  flake.nix  launch.vs.json  vcpkg.json
.github/workflows/: build.yml  docs.yml
Main/: Main.cpp
Runtime/: NtContext.cpp  NtContext.h
docs/: join-strategies.md  mainpage.dox  nt-architecture-mapping.md  reactos-ob-comparison.md  tarski-sakura-separation.md
include/: Api.h  CursorManager.h  HandlerManager.h  IStorageBackend.h  IdentityManager.h  InMemoryBackend.h  LifecycleManager.h  Merkle.h  MultigroupCodec.h  NT.h  NamespaceReferenceManager.h  ObjectManager.h  PermissionsManager.h  RNT_C_API.h  Runtime.h  SqliteBackend.h  TupleCodec.h  Types.h  VM.h  WAM.h
src/: CursorManager.cpp  HandlerManager.cpp  IdentityManager.cpp  InMemoryBackend.cpp  LifecycleManager.cpp  Merkle.cpp  MultigroupCodec.cpp  NT.cpp  NamespaceReferenceManager.cpp  ObjectManager.cpp  PermissionsManager.cpp  RNT_C_API.cpp  RelationalNT.cpp  SqliteBackend.cpp  TupleCodec.cpp  VM.cpp  WAM.cpp
test/: C_API.cpp  CursorManager.cpp  LifecycleManager.cpp  MultigroupCodec.cpp  NamespaceReferenceManager.cpp  ObjectManager.cpp  VM.cpp
